--- a/502.html
+++ b/502.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>502 bad gateway - VNOJ</title>
+    <title>502 bad gateway - HNOJ</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
         hr {
@@ -49,9 +49,9 @@
         <br>
         <div class="popup">
             <div>
-                <img class="logo" src="/logo.png" alt="VNOJ">
+                <img class="logo" src="/logo.png" alt="HNOJ">
             </div>
-            <h1 style="width: 100%;">Oops, the VNOJ is down.</h1>
+            <h1 style="width: 100%;">Oops, HNOJ is down.</h1>
         </div>
         <br>
         <hr>
